[NEP-53] -update client to use order flow

--- a/client-site/src/App.css
+++ b/client-site/src/App.css
@@ -24,7 +24,6 @@ form {
   padding: 40px;
 }
 
-
 #payment-message {
   color: rgb(105, 115, 134);
   font-size: 16px;
@@ -87,7 +86,7 @@ button:disabled {
 .spinner:before,
 .spinner:after {
   position: absolute;
-  content: '';
+  content: "";
 }
 
 .spinner:before {
